--- a/src/Hosts/Modulus.Host.Avalonia/Components/TitleBar.axaml
+++ b/src/Hosts/Modulus.Host.Avalonia/Components/TitleBar.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:behaviors="using:Modulus.Host.Avalonia.Behaviors"
+             xmlns:behaviors="using:Modulus.UI.Avalonia.Behaviors"
              xmlns:vm="using:Modulus.Host.Avalonia.Shell.ViewModels"
              xmlns:i="using:Avalonia.Xaml.Interactivity"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="50"
