--- a/src/Modulus.UI.Avalonia/Components/TitleBar.axaml
+++ b/src/Modulus.UI.Avalonia/Components/TitleBar.axaml
@@ -3,11 +3,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:behaviors="using:Modulus.UI.Avalonia.Behaviors"
-             xmlns:vm="using:Modulus.Host.Avalonia.Shell.ViewModels"
+             xmlns:local="using:Modulus.UI.Avalonia.Components"
              xmlns:i="using:Avalonia.Xaml.Interactivity"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="50"
-             x:Class="Modulus.Host.Avalonia.Components.TitleBar"
-             x:DataType="vm:ShellViewModel">
+             x:Class="Modulus.UI.Avalonia.Components.TitleBar"
+             x:Name="Root">
     
     <Grid ColumnDefinitions="Auto, Auto, *, Auto" Height="50" 
           Background="{DynamicResource TitleBarBackgroundBrush}">
@@ -17,7 +17,8 @@
         
         <!-- Nav Toggle Button -->
         <Button Grid.Column="0" 
-                Command="{Binding ToggleNavCollapseCommand}"
+                Command="{Binding ToggleCommand, ElementName=Root}"
+                IsVisible="{Binding ShowToggle, ElementName=Root}"
                 Classes="navToggle"
                 Width="48" Height="50"
                 Background="Transparent"
@@ -30,12 +31,15 @@
         
         <!-- Branding -->
         <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" Margin="5,0,15,0">
-            <TextBlock Text="MODULUS" FontWeight="Black" FontSize="18" 
+            <TextBlock Text="{Binding Title, ElementName=Root}" 
+                       FontWeight="Black" FontSize="18" 
                        Foreground="{DynamicResource TitleBarTextBrush}" 
                        VerticalAlignment="Center"/>
             <Border Background="{DynamicResource TitleBarBadgeBackgroundBrush}" 
-                    CornerRadius="4" Padding="6,2" Margin="10,0,0,0">
-                <TextBlock Text="HOST" FontSize="10" FontWeight="Bold" 
+                    CornerRadius="4" Padding="6,2" Margin="10,0,0,0"
+                    IsVisible="{Binding Badge, ElementName=Root, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
+                <TextBlock Text="{Binding Badge, ElementName=Root}" 
+                           FontSize="10" FontWeight="Bold" 
                            Foreground="{DynamicResource TitleBarTextBrush}"/>
             </Border>
         </StackPanel>
@@ -43,9 +47,11 @@
         <!-- Spacer -->
         <Border Grid.Column="2" />
         
-        <!-- Window Controls (placeholder for future theme toggle) -->
-        <StackPanel Grid.Column="3" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,10,0">
-            <!-- Theme toggle or other controls can be added here -->
-        </StackPanel>
+        <!-- Right Content -->
+        <ContentPresenter Grid.Column="3" 
+                          Content="{Binding RightContent, ElementName=Root}"
+                          VerticalAlignment="Center" 
+                          Margin="0,0,10,0"/>
     </Grid>
 </UserControl>
+
